# deltadorsal

./: .gitignore  .gitmodules  README.md  index.html  pyproject.toml
assets/: mano_face_labels.json
configs/: train_force.yaml  train_pose.yaml
configs/callbacks/: default.yaml
configs/debug/: default.yaml
configs/hydra/: default.yaml
configs/logger/: wandb.yaml
configs/model/: deltadorsalforce.yaml  deltadorsalpose.yaml
configs/paths/: default.yaml
src/: train_force.py  train_pose.py
src/datasets/: egodorsal_datamodule.py  egodorsal_dataset.py  transforms.py
src/models/: deltadorsalforce_module.py  deltadorsalnet.py  deltadorsalpose_module.py  losses.py  mano_wrapper.py
src/utils/: geom_utils.py  instantiators.py  logging_utils.py  mano_utils.py  renderer.py  visualize.py
